Configure default command line, initramfs optional
Let's configure default command line with LCD now working.
And let's make initramfs optional, and fix a typo.

--- a/system/etc/kexec/kexec-wrap.conf
+++ b/system/etc/kexec/kexec-wrap.conf
@@ -17,5 +17,12 @@ image-size=26214400
 # File /system/etc/kexec/devtree is copied to root by logwrapper
 dtb=/devtree
 
-# FIle /system/etc/kexec/ramdisk.img is copied to root by logwrapper
-ramdisk=/ramdisk.img
+# File /system/etc/kexec/ramdisk.img is copied to root by logwrapper.
+# Comment this out if you don't want to use an initramfs.
+#ramdisk=/ramdisk.img
+
+# Default kernel command line, do not use quotes here.
+# Let's use initramfs or mmc1blk23 for now until better root is
+# available. Note that earlycon does not need CONFIG_DEBUG_LL.
+command-line=root=/dev/mmcblk1p23 console=tty0 console=ttyS2,115200 debug earlyprintk earlycon
+
