--- a/system/etc/kexec/kexec-wrap.conf
+++ b/system/etc/kexec/kexec-wrap.conf
@@ -24,5 +24,5 @@ dtb=/devtree
 # Default kernel command line, do not use quotes here.
 # Let's use initramfs or mmc1blk23 for now until better root is
 # available. Note that earlycon does not need CONFIG_DEBUG_LL.
-command-line=root=/dev/mmcblk1p23 console=tty0 console=ttyS2,115200 debug earlyprintk earlycon
+command-line=root=/dev/mmcblk1p23 console=tty0 console=ttyS2,115200 fbcon=rotate:1 debug earlyprintk earlycon
 
